[tool.poetry]
name = "rsa-cli"
version = "0.2.0"
description = "RSA-CLI é uma ferramenta de linha de comando utilizada para criar chaves RSA públicas e privadas, realizar a cifração e decifração de informações"
license = "MIT"
authors = ["Pedro Bueno <contato0113@gmail.com>"]
readme = "README.md"
packages = [{include = "rsa"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: Portuguese (Brazilian)",
    "Environment :: Console",
    "Topic :: Education",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
"Documentação" = "https://rsa-cli.readthedocs.io/pt-br/latest/"
"Código" = "https://github.com/PHBueno/RSA"


[tool.poetry.scripts]
rsa = "rsa.core.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.2"
rich = "^13.7.1"
typer = "^0.12.3"
pyasn1 = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"

[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.25.1"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-material = "^9.5.28"
mkdocstrings-python = "^1.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"

pre_test = "task lint"
test = "pytest -s -x --cov=rsa -vv"
post_test = "coverage html"